# moral-sim

./: .gitignore  README.md  main.py  pyproject.toml  results copy.json  results.json  results_bkup.json  run_all.sh
scenarios/: aeridor.yaml  aridian_dust.yaml  predictive_policing.yaml  silent_swarm.yaml  undercover.yaml  vorlag.yaml
scenarios/test_scenarios/: medical_dilemma.yaml  trolley.yaml
src/: analysis_script.py  utils.py
src/moral_sim/: simulator.py  tree.py
